syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "Messaging.Protos";

service MessageChangeStream {
  rpc Communicate (stream MessageExchange) returns (stream MessageExchange);
  rpc SendRawMessage (RawMessage) returns (google.protobuf.Empty); 
}

message MessageExchange {
  oneof payload {
    IntroductionMessage intro = 1;
    RawMessage raw = 2;
    ProcessedMessage result = 3;
  }
}

message IntroductionMessage {
  string id = 1;
  string type = 2;
}

message RawMessage {
  int32 id = 1;
  string sender = 2;
  string message = 3;
}

message ProcessedMessage {
  int32 id = 1;
  string engine = 2;
  int32 messageLength = 3;
  bool isValid = 4;
  map<string, bool> regexResults = 5;
}
